# ros-proj

./: .gitignore  README.md  ROS2_Robotics Project _Presentation.pptx
src/bringup/: package.xml  setup.cfg  setup.py
src/bringup/bringup/: coordinator_node.py  startup_homing_node.py  startup_pose_node.py
src/bringup/config/: coordinator.yaml
src/bringup/launch/: demo.launch.py
src/bringup/resource/: bringup
src/decision_logic/: package.xml  setup.cfg  setup.py
src/decision_logic/config/: bin_map.yaml
src/decision_logic/decision_logic/: decision_node.py
src/decision_logic/launch/: decision.launch.py
src/decision_logic/resource/: decision_logic
src/manipulation/: CMakeLists.txt  package.xml
src/manipulation/config/: poses.yaml
src/manipulation/include/manipulation/: manipulation_node.hpp
src/manipulation/launch/: manipulation.launch.py
src/manipulation/src/: manipulation_node.cpp
src/moveit_config/: CMakeLists.txt  package.xml
src/moveit_config/config/: industrial_arm.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  trajectory_execution.yaml
src/moveit_config/launch/: move_group.launch.py  planning_demo.launch.py
src/perception/: package.xml  setup.py
src/perception/config/: perception.yaml
src/perception/launch/: perception.launch.py
src/perception/perception/: mock_qr_stream.py  qr_decoder_bridge.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: joint_limits.yaml
src/robot_description/launch/: view_robot.launch.py
src/robot_description/rviz/: robot.rviz
src/robot_description/urdf/: industrial_arm.urdf.xacro
src/simulation/: package.xml  setup.cfg  setup.py
src/simulation/config/: attachment.yaml
src/simulation/launch/: gazebo.launch.py
src/simulation/models/qr_object/: model.config  model.sdf
src/simulation/models/sorting_bin/: model.config  model.sdf
src/simulation/models/work_table/: model.config  model.sdf
src/simulation/simulation/: grasp_attachment_node.py
src/simulation/worlds/: pick_scan_place.world
src/workflow_interfaces/: CMakeLists.txt  package.xml
src/workflow_interfaces/msg/: BinTarget.msg
src/workflow_interfaces/srv/: ExecuteStage.srv
