<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>System bringup, launch files, and coordinator node for the pick-scan-place workflow.</description>
  <maintainer email="student@example.com">Robotics Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>workflow_interfaces</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>decision_logic</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>manipulation</exec_depend>
  <exec_depend>moveit_config</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>simulation</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
