<?xml version="1.0"?>
<package format="3">
  <name>manipulation</name>
  <version>0.1.0</version>
  <description>MoveIt 2 manipulation server for industrial pick-scan-place trajectories.</description>
  <maintainer email="student@example.com">Robotics Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>workflow_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
