<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>Perception bridge and demo QR image tools for zbar_ros based scanning.</description>
  <maintainer email="student@example.com">Robotics Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-qrcode</exec_depend>
  <exec_depend>zbar_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
